--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/animals/partials/_drupal.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/animals/partials/_drupal.sass
@@ -32,7 +32,7 @@ body
     .search, #help-center
       display: none
     .login
-      padding: 0.5em 2em 0 0
+      padding: 1em 2em 0 0
   #page
     width: 100%
   #main-wrapper div[role="main"]
