--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/animals/partials/_panes.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/animals/partials/_panes.sass
@@ -50,11 +50,11 @@
 .s1
   text-align: center
   h1
-    color: $medGrey
+    color: $lightGrey
     font-size: 24px
     font-family: din-web
     span
-      color: $darkGrey
+      color: $medGrey
   h2
     color: $accentColor
     font-size: 24px
